--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
@@ -25,7 +25,7 @@
             android:splitMotionEvents="false" >
 
             <TextView
-                android:id="@+id/textViewTitle"
+                android:id="@+id/textViewDialogTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
