--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_normal_rect.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_normal_rect.xml
@@ -3,9 +3,6 @@
        android:shape="rectangle" >
 
     <solid android:color="@color/new_orange"/>
-    <corners android:bottomRightRadius="5dp"
-             android:bottomLeftRadius="0dp"
-             android:topLeftRadius="0dp"
-             android:topRightRadius="0dp"/>
+    <corners android:radius="0dp"/>
 
 </shape>
