--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1,7 +1,8 @@
-<android.support.v4.widget.DrawerLayout android:id="@+id/drawerLayout"
-                                        xmlns:android="http://schemas.android.com/apk/res/android"
-                                        android:layout_width="720px"
-                                        android:layout_height="1134px">
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawerLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="720px"
+    android:layout_height="1134px">
 
     <FrameLayout
         android:id="@+id/container"
@@ -117,7 +118,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:splitMotionEvents="false"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <TextView
                         android:id="@+id/textViewBeforeAcceptRequestInfo"
@@ -165,7 +166,7 @@
                             android:id="@+id/driverAcceptRideBtn"
                             android:layout_width="480px"
                             android:layout_height="99px"
-                            android:background="@drawable/new_orange_btn_selector"
+                            android:background="@drawable/new_orange_btn_selector_rect"
                             android:text="@string/accept_ride"
                             android:textColor="@drawable/white_color_selector"
                             android:textSize="@dimen/button_text_size"/>
@@ -422,7 +423,7 @@
                                     android:id="@+id/driverStartRideBtn"
                                     android:layout_width="480px"
                                     android:layout_height="99px"
-                                    android:background="@drawable/new_orange_btn_selector"
+                                    android:background="@drawable/new_orange_btn_selector_rect"
                                     android:text="@string/start_ride"
                                     android:textColor="@drawable/white_color_selector"
                                     android:textSize="@dimen/button_text_size"/>
@@ -431,7 +432,7 @@
                                     android:id="@+id/buttonMarkArrived"
                                     android:layout_width="480px"
                                     android:layout_height="99px"
-                                    android:background="@drawable/new_orange_btn_selector"
+                                    android:background="@drawable/new_orange_btn_selector_rect"
                                     android:text="@string/arrived"
                                     android:textColor="@drawable/white_color_selector"
                                     android:textSize="@dimen/button_text_size"/>
@@ -833,7 +834,7 @@
                 android:layout_marginTop="90px"
                 android:animateLayoutChanges="true"
                 android:splitMotionEvents="false"
-                android:visibility="visible"
+                android:visibility="gone"
                 >
 
 
