--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -374,15 +374,15 @@
                         android:tag="mwar"
                         android:visibility="gone" />
 
-                    <Button
-                        android:id="@+id/buttonDriverNavigation"
-                        android:layout_width="80px"
-                        android:layout_height="80px"
-                        android:layout_below="@+id/driverPassengerInfoRl"
-                        android:layout_marginTop="27px"
-                        android:layout_marginLeft="40px"
-                        android:background="@drawable/navigation_blue_boarderd2"
-                        android:tag="mwar" />
+                    <!--<Button-->
+                        <!--android:id="@+id/buttonDriverNavigation"-->
+                        <!--android:layout_width="80px"-->
+                        <!--android:layout_height="80px"-->
+                        <!--android:layout_below="@+id/driverPassengerInfoRl"-->
+                        <!--android:layout_marginTop="27px"-->
+                        <!--android:layout_marginLeft="40px"-->
+                        <!--android:background="@drawable/navigation_blue_boarderd2"-->
+                        <!--android:tag="mwar" />-->
 
 
                     <!-- start ride layout-->
@@ -463,6 +463,18 @@
                             android:tag="mwar"
                             android:layout_above="@+id/driverInRideInnerRl"
                             />
+                        <!--<Button-->
+                            <!--android:id="@+id/buttonDriverNavigation"-->
+                            <!--android:layout_width="250px"-->
+                            <!--android:layout_height="140px"-->
+                            <!--android:layout_alignParentRight="true"-->
+                            <!--android:layout_marginBottom="40px"-->
+                            <!--android:layout_marginRight="40px"-->
+                            <!--android:text="@string/click_for_direction"-->
+                            <!--android:textColor="@color/white"-->
+                            <!--android:layout_above="@+id/driverInRideInnerRl"-->
+                            <!--android:background="@drawable/red_btn_selector"-->
+                            <!--android:tag="mwar" />-->
 
 
                         <ImageView
@@ -771,7 +783,22 @@
                         </RelativeLayout>
 
                     </RelativeLayout>
+
+                    <Button
+                        android:id="@+id/buttonDriverNavigation"
+                        android:layout_width="250px"
+                        android:layout_height="140px"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="580px"
+                        android:layout_marginRight="40px"
+                        android:text="@string/click_for_direction"
+                        android:textColor="@color/white"
+                        android:background="@drawable/red_btn_selector"
+                        android:tag="mwar" />
+
                 </RelativeLayout>
+
+
 
 
             </RelativeLayout>
