--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1842,49 +1842,76 @@
 
 
                     <RelativeLayout
-                        android:id="@+id/RelativeLayoutDailyHours"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/RelativeLayoutNotificationCenter"
+                        android:layout_width="90px"
+                        android:layout_height="80px"
+                        android:layout_marginRight="15px"
+                        android:layout_gravity="center_vertical"
                         android:layout_alignParentRight="true"
-                        android:layout_marginTop="22px"
+                        android:layout_marginTop="18px"
                         android:gravity="center_vertical"
                         >
 
-                        <TextView
-                            android:id="@+id/textViewTitleBarOnlineHours"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="@string/Duty_Hours"
-                            android:textColor="@color/white"
-                            android:textSize="42px"/>
+                        <!--<TextView-->
+                            <!--android:id="@+id/textViewTitleBarOnlineHours"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:gravity="center"-->
+                            <!--android:text="@string/Duty_Hours"-->
+                            <!--android:textColor="@color/white"-->
+                            <!--android:textSize="42px"/>-->
 
 
-                        <TextView
-                            android:id="@+id/textViewTitleBarOvalText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="60px"
-                            android:layout_marginLeft="20px"
-                            android:layout_marginRight="20px"
-                            android:layout_toRightOf="@+id/textViewTitleBarOnlineHours"
-                            android:gravity="center"
-                            android:singleLine="true"
-                            android:text="HH:MM"
-                            android:textColor="@color/white"
-                            android:textSize="42px"
-                            />
+                        <!--<TextView-->
+                            <!--android:id="@+id/textViewTitleBarOvalText"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="60px"-->
+                            <!--android:layout_marginLeft="20px"-->
+                            <!--android:layout_marginRight="20px"-->
+                            <!--android:layout_toRightOf="@+id/textViewTitleBarOnlineHours"-->
+                            <!--android:gravity="center"-->
+                            <!--android:singleLine="true"-->
+                            <!--android:text="HH:MM"-->
+                            <!--android:textColor="@color/white"-->
+                            <!--android:textSize="42px"-->
+                            <!--/>-->
 
-                        <ProgressBar
-                            android:id="@+id/progressBarDriverOnlineHours"
-                            android:layout_width="50px"
-                            android:layout_height="50px"
-                            android:layout_marginLeft="45px"
-                            android:layout_marginTop="5px"
-                            android:layout_toRightOf="@+id/textViewTitleBarOnlineHours"
-                            android:src="@drawable/oval"
+                        <!--<ProgressBar-->
+                            <!--android:id="@+id/progressBarDriverOnlineHours"-->
+                            <!--android:layout_width="50px"-->
+                            <!--android:layout_height="50px"-->
+                            <!--android:layout_marginLeft="45px"-->
+                            <!--android:layout_marginTop="5px"-->
+                            <!--android:layout_toRightOf="@+id/textViewTitleBarOnlineHours"-->
+                            <!--android:src="@drawable/oval"-->
+                            <!--android:tag="mwar"-->
+                            <!--android:visibility="gone"-->
+                            <!--/>-->
+
+                        <ImageView
+                            android:id="@+id/imageViewNotification"
+                            android:layout_width="70px"
+                            android:layout_height="70px"
+                            android:layout_centerInParent="true"
+                            android:padding="10px"
+                            android:src="@drawable/notification_icon"
                             android:tag="mwar"
-                            android:visibility="gone"
                             />
+
+                        <TextView
+                            android:id="@+id/textViewNotificationValue"
+                            android:layout_width="32px"
+                            android:layout_height="35px"
+                            android:layout_alignParentRight="true"
+                            android:background="@drawable/ic_notification_unread"
+                            android:gravity="center_horizontal"
+                            android:paddingTop="2px"
+                            android:tag="mwar"
+                            android:text="0"
+                            android:textColor="@color/white"
+                            android:textSize="20px"
+                            />
+
 
 
                     </RelativeLayout>
@@ -2296,6 +2323,30 @@
 
                         />
 
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="4px"
+                        android:layout_alignParentBottom="true"
+                        android:background="@drawable/line_menu"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/notificationCenterRl"
+                    android:layout_width="match_parent"
+                    android:layout_height="84px"
+                    android:background="@drawable/menu_item_selector"
+                    android:splitMotionEvents="false">
+
+                    <TextView
+                        android:id="@+id/notificationCenterText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="42px"
+                        android:text="Notifications"
+                        android:textColor="@color/white"
+                        android:textSize="34px"/>
 
                     <ImageView
                         android:layout_width="match_parent"
