--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/notification_list_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/notification_list_item.xml
@@ -17,7 +17,6 @@
             android:id="@+id/textViewTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24px"
             android:layout_marginRight="24px"
             android:layout_gravity="right"
             android:text="Today"
@@ -31,8 +30,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80px"
+                android:layout_height="80px"
                 android:layout_marginTop="36px"
                 android:layout_marginLeft="10px"
                 android:layout_marginRight="20px"
@@ -44,7 +43,7 @@
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="44px"
+                android:layout_marginTop="24px"
                 android:layout_marginLeft="20px"
                 android:layout_marginRight="20px"
                 android:layout_marginBottom="5px"
@@ -57,7 +56,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="2px"
-            android:layout_marginTop="36px"
+            android:layout_marginTop="24px"
             android:layout_marginLeft="10px"
             android:layout_marginRight="20px"
             android:background="@color/menu_black"
