--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1820,6 +1820,15 @@
                             android:textColor="@color/white"
                             android:textSize="38px"/>
 
+                        <TextView
+                            android:id="@+id/temptext"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="4.5"
+                            android:textColor="@color/white"
+                            android:textSize="38px"/>
+
                     </LinearLayout>
 
 
