--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -77,7 +77,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="117px"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             >
 
             <Button
@@ -91,12 +91,12 @@
 
             <Button
                 android:id="@+id/buttonRegister"
-                android:layout_width="288px"
-                android:layout_height="96px"
-                android:layout_marginLeft="57px"
-                android:background="@drawable/blue_btn_selector"
+                android:layout_width="636px"
+                android:layout_height="112px"
+                android:layout_marginTop="24px"
+                android:background="@drawable/background_white_rounded_bordered"
                 android:text="REGISTER"
-                android:textColor="@drawable/white_color_selector"
+                android:textColor="@color/new_orange"
                 android:textSize="@dimen/button_text_size"
                 android:visibility="gone"
                 />
