--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -360,10 +360,24 @@
                     </LinearLayout>
 
                     <ImageView
+                        android:id="@+id/customerInfoLine"
                         android:layout_width="match_parent"
                         android:layout_height="6px"
                         android:layout_below="@+id/driverPassengerInfoRl"
                         android:background="@drawable/shadow_down"/>
+
+                    <TextView
+                        android:id="@+id/ETATimerText"
+                        android:layout_width="270px"
+                        android:layout_height="100px"
+                        android:layout_centerHorizontal="true"
+                        android:layout_below="@+id/customerInfoLine"
+                        android:text="00:00"
+                        android:textSize="72px"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:background="@color/menu_black"
+                        android:tag="mwar" />
 
                     <ImageView
                         android:id="@+id/driverFreeRideIcon"
@@ -393,7 +407,7 @@
                     <RelativeLayout
                         android:id="@+id/driverStartRideMainRl"
                         android:layout_width="match_parent"
-                        android:layout_height="240px"
+                        android:layout_height="210px"
                         android:layout_alignParentBottom="true"
                         android:splitMotionEvents="false"
                         android:visibility="visible">
@@ -500,7 +514,7 @@
                         android:layout_alignParentBottom="true"
                         android:gravity="bottom"
                         android:splitMotionEvents="false"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
                         <Button
                             android:id="@+id/driverEndRideMyLocationBtn"
@@ -838,11 +852,11 @@
                         android:layout_width="250px"
                         android:layout_height="140px"
                         android:layout_alignParentRight="true"
-                        android:layout_marginTop="580px"
+                        android:layout_marginTop="680px"
                         android:layout_marginRight="40px"
                         android:text="@string/click_for_direction"
                         android:textColor="@color/white"
-                        android:background="@drawable/red_btn_selector"
+                        android:background="@drawable/orange_btn_round_selector"
                         android:tag="mwar" />
 
                 </RelativeLayout>
