--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -378,41 +378,25 @@
                         android:visibility="gone"/>
 
 
-                    <!--<Button-->
-                        <!--android:id="@+id/buttonDriverNavigation"-->
-                        <!--android:layout_width="80px"-->
-                        <!--android:layout_height="80px"-->
-                        <!--android:layout_below="@+id/driverPassengerInfoRl"-->
-                        <!--android:layout_marginLeft="40px"-->
-                        <!--android:layout_marginTop="27px"-->
-                        <!--android:background="@drawable/naviagtion_orange_icon"-->
-                        <!--android:tag="mwar"/>-->
+                    <LinearLayout
+                        android:id="@+id/linearLayoutStartEnd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:orientation="vertical"
+                        android:gravity="bottom"
+
+                        >
+
 
 
                     <!-- start ride layout-->
                     <RelativeLayout
                         android:id="@+id/driverStartRideMainRl"
-                        android:layout_width="match_parent"
-                        android:layout_height="240px"
-                        android:layout_alignParentBottom="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:splitMotionEvents="false"
-                        android:visibility="visible">
-
-                        <Button
-                            android:id="@+id/driverStartRideMyLocationBtn"
-                            android:layout_width="80px"
-                            android:layout_height="80px"
-                            android:layout_marginBottom="27px"
-                            android:layout_marginLeft="40px"
-                            android:background="@drawable/new_location_con"
-                            android:tag="mwar"/>
-
-
-                        <RelativeLayout
-                            android:id="@+id/driverAfterAcceptRideButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true">
+                        android:visibility="gone">
 
                             <RelativeLayout
                                 android:id="@+id/driverStartArrivedLayout"
@@ -450,96 +434,32 @@
                                 android:textColor="@drawable/white_color_selector"
                                 android:textSize="@dimen/button_text_size"/>
 
-                        </RelativeLayout>
 
-                        <!--<Button-->
-                        <!--android:id="@+id/driverStartRideBtn"-->
-                        <!--android:layout_width="648px"-->
-                        <!--android:layout_height="99px"-->
-                        <!--android:layout_above="@+id/driverCancelRideBtn"-->
-                        <!--android:layout_centerHorizontal="true"-->
-                        <!--android:layout_marginBottom="27px"-->
-                        <!--android:background="@drawable/blue_btn_selector"-->
-                        <!--android:text="@string/start_ride"-->
-                        <!--android:textColor="@drawable/white_color_selector"-->
-                        <!--android:textSize="@dimen/button_text_size" />-->
-
-
-                        <!--<Button-->
-                        <!--android:id="@+id/buttonMarkArrived"-->
-                        <!--android:layout_width="648px"-->
-                        <!--android:layout_height="99px"-->
-                        <!--android:layout_above="@+id/driverCancelRideBtn"-->
-                        <!--android:layout_centerHorizontal="true"-->
-                        <!--android:layout_marginBottom="27px"-->
-                        <!--android:background="@drawable/blue_btn_selector"-->
-                        <!--android:text="Arrived"-->
-                        <!--android:textColor="@drawable/white_color_selector"-->
-                        <!--android:textSize="@dimen/button_text_size"-->
-                        <!--android:visibility="gone"-->
-                        <!--/>-->
-
-                        <!--<Button-->
-                        <!--android:id="@+id/driverCancelRideBtn"-->
-                        <!--android:layout_width="648px"-->
-                        <!--android:layout_height="99px"-->
-                        <!--android:layout_alignParentBottom="true"-->
-                        <!--android:layout_centerHorizontal="true"-->
-                        <!--android:layout_marginBottom="27px"-->
-                        <!--android:background="@drawable/red_btn_selector"-->
-                        <!--android:text="@string/cancel_ride"-->
-                        <!--android:textColor="@drawable/white_color_selector"-->
-                        <!--android:textSize="@dimen/button_text_size" />-->
                     </RelativeLayout>
 
                     <!-- in ride layout -->
-                    <RelativeLayout
+                    <LinearLayout
                         android:id="@+id/driverInRideMainRl"
                         android:layout_width="match_parent"
-                        android:layout_height="520px"
-                        android:layout_alignParentBottom="true"
+                        android:layout_height="wrap_content"
                         android:gravity="bottom"
                         android:splitMotionEvents="false"
-                        android:visibility="visible">
-
-                        <Button
-                            android:id="@+id/driverEndRideMyLocationBtn"
-                            android:layout_width="80px"
-                            android:layout_height="80px"
-                            android:layout_above="@+id/driverInRideInnerRl"
-                            android:layout_marginBottom="40px"
-                            android:layout_marginLeft="40px"
-                            android:background="@drawable/new_location_con"
-                            android:tag="mwar"
-                            />
-                        <!--<Button-->
-                            <!--android:id="@+id/buttonDriverNavigation"-->
-                            <!--android:layout_width="250px"-->
-                            <!--android:layout_height="140px"-->
-                            <!--android:layout_alignParentRight="true"-->
-                            <!--android:layout_marginBottom="40px"-->
-                            <!--android:layout_marginRight="40px"-->
-                            <!--android:text="@string/click_for_direction"-->
-                            <!--android:textColor="@color/white"-->
-                            <!--android:layout_above="@+id/driverInRideInnerRl"-->
-                            <!--android:background="@drawable/red_btn_selector"-->
-                            <!--android:tag="mwar" />-->
-
+                        android:visibility="visible"
+                        android:orientation="vertical"
+                        >
 
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="6px"
-                            android:layout_above="@+id/driverInRideInnerRl"
                             android:background="@drawable/shadow_up"/>
 
                         <!-- in ride operations rl-->
                         <RelativeLayout
-                            android:id="@+id/driverInRideInnerRl"
                             android:layout_width="match_parent"
                             android:layout_height="280px"
-                            android:layout_alignParentBottom="true"
                             android:background="@color/white_translucent"
                             android:splitMotionEvents="false"
+                            android:visibility="visible"
                             >
 
                             <!-- reached distance km, time, fare layout -->
@@ -725,7 +645,6 @@
                             android:id="@+id/inrideFareInfoRl"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
                             android:background="@color/white_translucent"
                             android:visibility="gone"
                             >
@@ -831,18 +750,32 @@
 
                         </RelativeLayout>
 
-                    </RelativeLayout>
+                    </LinearLayout>
+
+                    </LinearLayout>
+
+                    <Button
+                        android:id="@+id/driverEngagedMyLocationBtn"
+                        android:layout_width="80px"
+                        android:layout_height="80px"
+                        android:layout_marginBottom="40px"
+                        android:layout_marginLeft="40px"
+                        android:background="@drawable/new_location_con"
+                        android:tag="mwar"
+                        android:layout_above="@+id/linearLayoutStartEnd"
+                        />
 
                     <Button
                         android:id="@+id/buttonDriverNavigation"
                         android:layout_width="250px"
                         android:layout_height="140px"
                         android:layout_alignParentRight="true"
-                        android:layout_marginTop="580px"
+                        android:layout_marginBottom="40px"
                         android:layout_marginRight="40px"
+                        android:layout_above="@+id/linearLayoutStartEnd"
                         android:text="@string/click_for_direction"
                         android:textColor="@color/white"
-                        android:background="@drawable/red_btn_selector"
+                        android:background="@drawable/new_orange_direction_btn_selector"
                         android:tag="mwar" />
 
                 </RelativeLayout>
