--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/rating_star_white_selector.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/rating_star_white_selector.xml
@@ -6,6 +6,7 @@
         <item
             android:id="@android:id/secondaryProgress"
             android:drawable="@drawable/driver_rating_star_white_new"/>
+    <!--driver_rating_star_white_new-->
         <item
             android:id="@android:id/progress"
             android:drawable="@drawable/driver_ratting_star_orange"/>
