--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -2091,7 +2091,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:background="@drawable/transparent"
-                    android:splitMotionEvents="false">
+                    android:splitMotionEvents="false"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -2125,7 +2126,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:background="@drawable/transparent"
-                    android:splitMotionEvents="false">
+                    android:splitMotionEvents="false"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -2159,7 +2161,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:background="@drawable/transparent"
-                    android:splitMotionEvents="false">
+                    android:splitMotionEvents="false"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="match_parent"
